2010-03-14  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/fi.po: Update from translation team.

2010-03-11  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: change check for termcap.h to only check for
	  termcap.h if ncurses/termcap.h was not found, so that not
	  both are enabled.

2010-03-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/window.c: remove include of termcap.h because it's already
	  done in a better way from port.h

2010-02-07  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c, po/*.po: Don't use carriage return
	  in internationalized strings

	* src/script.c: Make variables seq and toact volatile to fix
	  setjmp warning. By Pavel Roskin.

	* src/main.c: Fix aliasing warning. By Pavel Roskin.

	* src/dial.c, src/file.c: Define what_lens as int, not as size_t.
	  By Pavel Roskin.

	* src/main.c: Better handling of ncurses const'ness. By Pavel Roskin.

	* src/main.c, src/wkeys.c, src/minicom.c: Fix crash when terminal
	  reads return EOF. By Pavel Roskin.

2010-01-05  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c: Fix status line to redraw only if necessary.

2010-01-03  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: Change version to 2.4+dev

2010-01-01  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Initialize 'local-echo' and 'add-LF' properly.

	* src/main.c, src/config.c: Fix error when compiling with
	   -Wformat -Werror=format-security, thanks Guillaume Rousse.

	* src/main.c: Fix: Do not all update_status if 'st' is not set.

2009-12-26  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c, src/minicom.h, src/minicom.c: Do not use the error
	  message display for informational messages but instead display
	  them in the status line without blocking the whole program.

	* src/updown.c: Fix possible snprintf overrun.

2009-12-20  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: change version number to 2.4
